Added user notes
